# smart-finance

./: .gitignore  .pre-commit-config.yaml  README.md  README_ZH.md  app.py  config.example.json  config.json  pyproject.toml  start.sh
.codex/: config.toml
backend/: .gitignore  README.md  pyproject.toml  sql_app.db
backend/app/: main.py  schemas.py
backend/app/api/: endpoints.py
backend/app/core/: database.py
backend/app/models/: transaction.py
backend/app/services/: llm_client.py  pdf_processor.py
backend/tests/: generate_dummy_pdf.py  test_pdf_processor_script.py  test_pipeline.py  verify_i18n.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  theme.ts
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/locales/: en.ts  zh.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Settings.tsx  Transactions.tsx
src/: llm_client.py  pdf_processor.py
tests/: generate_dummy_pdf.py  test_pdf_processor_script.py  test_pipeline.py
