[project]
name = "smart-finance"
version = "0.1.0"
description = "AI-powered monthly bill analyzer and financial advisor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.31.0",
    "pdfplumber>=0.10.3",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "openai>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
