[project]
name = "smart-finance"
version = "0.1.0"
description = "AI-powered monthly bill analyzer and financial advisor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pdfplumber>=0.10.3",
    "pandas>=2.0.0",
    "openai>=1.12.0",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "langchain-experimental>=0.4.0",
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.44",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "artifex>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "pre-commit>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
